[package]
name = "piped-mockup"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = "off"

[dependencies]
iced = { version = "0.13.1", features = [
    "advanced",
    "canvas",
    "debug",
    "image",
    "lazy",
    "tokio",
] }
bytemuck = "1.15.0"
glam = { version = "0.29.0", features = ["bytemuck"] }
tokio = { version = "1.40.0", features = ["fs"] }
rfd = "0.14.1"
image = "0.25.2"
